Added layout for battle page.

--- a/battle.html
+++ b/battle.html
@@ -8,6 +8,19 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <main class="battleGrid">
+        <div>
+            <h1>HP</h1>
+            <img src="images/pikachu.jpeg" alt="">
+            <h2>Pikachu</h2>
+            <h3>Attack</h3>
+        </div>
+        <div>
+            <h1>HP</h1>
+            <img src="images/magikarp.jpeg" alt="">
+            <h2>Magikarp</h2>
+        </div>
+    </main>
     <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
     <script src="js/battle.js"></script>
 </body>
