Added a function that updates specified cookies including health, names, and images.

--- a/battle.html
+++ b/battle.html
@@ -10,14 +10,14 @@
 <body>
     <main class="battleGrid">
         <div>
-            <h1>HP</h1>
-            <img src="images/pikachu.jpeg" alt="">
-            <h2>Pikachu</h2>
+            <h1 id="myPokemonHP"></h1>
+            <img id="myPokemonImage">
+            <h2 id="myPokemonName"></h2>
             <h3>Attack</h3>
         </div>
         <div>
-            <h1>HP</h1>
-            <img src="images/magikarp.jpeg" alt="">
+            <h1 id="cpuHealth"></h1>
+            <img src="images/magikarp.jpeg" alt="Magikarp from Pokemon">
             <h2>Magikarp</h2>
         </div>
     </main>
