--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
     <main>
         <div class="pokeCards">
             <a class="pokeCard1" href="battle.html" onclick="selectCharacter('Pikachu')">
-                <img src="images/pikachu.jpeg" alt="">
+                <img src="images/pikachu.jpeg" alt="Pikachu from Pokemon">
                 <h2>Pikachu</h2>
             </a>
             <a class="pokeCard2" href="battle.html" onclick="selectCharacter('Jigglypuff')">
-                <img src="images/jigglypuff.jpeg" alt="">
+                <img src="images/jigglypuff.jpeg" alt="Jigglypuff from Pokemon">
                 <h2>Jigglypuff</h2>
             </a>
             <a class="pokeCard3" href="battle.html" onclick="selectCharacter('Psyduck')">
-                <img src="images/psyduck.jpeg" alt="">
+                <img src="images/psyduck.jpeg" alt="Psyduck from Pokemon">
                 <h2>Psyduck</h2>
             </a>
         </div>
