--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Character Select</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -14,15 +14,15 @@
     </header>
     <main>
         <div class="pokeCards">
-            <a class="pokeCard1" href="battle.html" onclick="selectCharacter('Pikachu')">
+            <a class="pokeCard" href="battle.html" onclick="selectCharacter('Pikachu')">
                 <img src="images/pikachu.jpeg" alt="Pikachu from Pokemon">
                 <h2>Pikachu</h2>
             </a>
-            <a class="pokeCard2" href="battle.html" onclick="selectCharacter('Jigglypuff')">
+            <a class="pokeCard" href="battle.html" onclick="selectCharacter('Jigglypuff')">
                 <img src="images/jigglypuff.jpeg" alt="Jigglypuff from Pokemon">
                 <h2>Jigglypuff</h2>
             </a>
-            <a class="pokeCard3" href="battle.html" onclick="selectCharacter('Psyduck')">
+            <a class="pokeCard" href="battle.html" onclick="selectCharacter('Psyduck')">
                 <img src="images/psyduck.jpeg" alt="Psyduck from Pokemon">
                 <h2>Psyduck</h2>
             </a>
